Сreate offer page, updated select with popup, created add a custom token

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,10 +1,32 @@
 {
-    "sidebar.newOffer": "New offer",
-    "sidebar.myOffers": "My offers",
-    "sidebar.history": "History",
-    "offers.tabs.all": "All",
-    "offers.tabs.open": "Open",
-    "offers.tabs.pending": "Pending",
-    "offers.tabs.accepted": "Accepted",
-    "offers.tabs.cancelled": "Cancelled"
+  "sidebar.newOffer": "New offer",
+  "sidebar.myOffers": "My offers",
+  "sidebar.history": "History",
+  "offers.tabs.all": "All",
+  "offers.tabs.open": "Open",
+  "offers.tabs.pending": "Pending",
+  "offers.tabs.accepted": "Accepted",
+  "offers.tabs.cancelled": "Cancelled",
+  "offer.create.offer": "Offer",
+  "offer.create.addToken": "Add a custom token",
+  "offer.create.signText": "To create an offer, you will have to sign two transactions: Approve and Create",
+  "offer.create.acceptTerms": "By continuing, you accept",
+  "offer.create.termsConditions": "Terms & Conditions",
+  "offer.create.fee": "Service Fee",
+  "offer.warn.addToken": "Anyone can create a token, including creating fake versions of existing tokens. Be aware of scams and security risks",
+  "token.address": "Token contract address",
+  "token.name": "Token name",
+  "token.decimal": "Token decimal",
+  "token.from": "From",
+  "token.to": "To",
+  "token.rate": "Rate",
+  "token.amount": "Amount",
+  "token.receiver": "Receiver (optional)",
+  "token.invalid.address": "Invalid address",
+  "token.approve": "Approve token",
+  "token.create": "Create Trade",
+  "token.select": "Select a token",
+  "token.search": "Search asset or paste address",
+  "token.add.import": "Import",
+  "token.add.back": "Back"
 }
