wallet integration, offers checkbox

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -2,11 +2,24 @@
   "sidebar.newOffer": "New offer",
   "sidebar.myOffers": "My offers",
   "sidebar.history": "History",
+  "offers.title": "My offers",
+  "offers.cancelOffer": "Cancel offer",
+  "offers.offerIdOrAsset": "Offer ID or Asset",
   "offers.tabs.all": "All",
   "offers.tabs.open": "Open",
   "offers.tabs.pending": "Pending",
   "offers.tabs.accepted": "Accepted",
   "offers.tabs.cancelled": "Cancelled",
+  "offers.column.id": "Offer ID",
+  "offers.column.fromAsset": "From asset 1",
+  "offers.column.toAsset": "To asset 2",
+  "offers.column.amount1": "Amount1",
+  "offers.column.amount2": "Amount2",
+  "offers.column.rate": "Rate",
+  "offers.column.address": "Address",
+  "offers.column.status": "Status",
+  "offers.column.date": "Date",
+  "offers.column.share": "Share",
   "offer.create.offer": "Offer",
   "offer.create.addToken": "Add a custom token",
   "offer.create.signText": "To create an offer, you will have to sign two transactions: Approve and Create",
