--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -40,7 +40,7 @@
         "amountFrom": "Amount 1",
         "amountTo": "Amount 2",
         "rate": "Rate",
-        "address": "Address",
+        "txHash": "Tx hash",
         "status": "Status",
         "date": "Date",
         "share": "Share"
@@ -104,6 +104,7 @@
     "offerCreated": "Offer has been created",
     "codeCopied": "Code has been copied",
     "addressCopied": "Address has been copied",
+    "txLinkCopied": "Tx link has been copied",
     "offerCancelled": "Offer has been cancelled"
   },
   "shared": {
