refactor: Update table cell alignment and styling

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -28,6 +28,9 @@
       "cancelled": "Cancelled"
     },
     "table": {
+      "cell": {
+        "amountWithFee": "& fee {{amount}}"
+      },
       "status": {
         "open": "Open",
         "accepted": "Accepted",
