--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -71,8 +71,11 @@
       "offer": "New offer",
       "addToken": "Add a custom token",
       "signText": "To create an offer, you will have to sign two transactions: Approve and Create",
+      "allowanceText": "You approved token allowance. Now you’re one click away from Create Trade",
       "acceptTerms": "By continuing, you accept",
       "termsConditions": "Terms & Conditions",
+      "tokenImported": "Token imported",
+      "successfullyImported": "You’ve successfully imported",
       "fee": "Service Fee"
     },
     "accept": {
